# rusty-short

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml
migrations/: 001_init.sql  002_enhanced_analytics.sql
nginx/: nginx.conf
src/: config.rs  lib.rs  main.rs
src/api/: handlers.rs  mod.rs  routes.rs
src/cache/: link_cache.rs  mod.rs
src/domain/: mod.rs  models.rs
src/observability/: logging.rs  metrics.rs  mod.rs
src/repository/: link_repository.rs  mod.rs
src/services/: analytics_service.rs  link_service.rs  mod.rs  qr_service.rs
tests/: integration_test.rs
