[package]
name = "rustyshort"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"

[[bin]]
name = "rustyshort"
path = "src/main.rs"

[lib]
name = "rustyshort"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1.43", features = ["full"] }
sqlx = { version = "0.8.5", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
tower = { version = "0.5.2", features = ["limit", "buffer", "timeout"] }
tower-http = { version = "0.6.2", features = ["trace", "cors", "compression-full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
nanoid = "0.4.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
dotenvy = "0.15.7"
thiserror = "2.0.9"
anyhow = "1.0.95"
moka = { version = "0.12.8", features = ["future"] }
qrcode = "0.14.1"
image = "0.25.7"
base64 = "0.22.1"
url = "2.5.4"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.16.0"
woothee = "0.13"
sha2 = "0.10"
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

